--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,49 +1,20 @@
 {
   "api": {
-    "UserService": {
-      "dependsOn": [
-        {
-          "attributes": [
-            "Name",
-            "Arn"
-          ],
-          "category": "function",
-          "resourceName": "UserServiceLambda"
-        }
-      ],
-      "providerPlugin": "awscloudformation",
-      "service": "API Gateway"
-    },
     "myapplicationsecretaryamplify": {
-      "dependsOn": [
-        {
-          "attributes": [
-            "UserPoolId"
-          ],
-          "category": "auth",
-          "resourceName": "myapplicationsecretaryamplify"
-        }
-      ],
+      "dependsOn": [],
       "output": {
         "authConfig": {
           "additionalAuthenticationProviders": [
             {
               "authenticationType": "AWS_IAM"
-            },
-            {
-              "apiKeyConfig": {
-                "apiKeyExpirationDate": "2023-02-21T01:03:35.314Z",
-                "apiKeyExpirationDays": 30,
-                "description": "userKey"
-              },
-              "authenticationType": "API_KEY"
             }
           ],
           "defaultAuthentication": {
-            "authenticationType": "AMAZON_COGNITO_USER_POOLS",
-            "userPoolConfig": {
-              "userPoolId": "authmyapplicationsecretaryamplify"
-            }
+            "apiKeyConfig": {
+              "apiKeyExpirationDays": 30,
+              "description": "api key description"
+            },
+            "authenticationType": "API_KEY"
           }
         }
       },
@@ -69,9 +40,7 @@
           ],
           "passwordPolicyMinLength": 8
         },
-        "signupAttributes": [
-          "EMAIL"
-        ],
+        "signupAttributes": [],
         "socialProviders": [
           "GOOGLE"
         ],
@@ -84,137 +53,6 @@
       },
       "providerPlugin": "awscloudformation",
       "service": "Cognito"
-    }
-  },
-  "function": {
-    "UserServiceLambda": {
-      "build": true,
-      "dependsOn": [
-        {
-          "attributes": [
-            "Arn"
-          ],
-          "category": "function",
-          "resourceName": "myapplicationsecretafuse"
-        },
-        {
-          "attributes": [
-            "Arn"
-          ],
-          "category": "function",
-          "resourceName": "myapplicationsecretanodeFetch"
-        },
-        {
-          "attributes": [
-            "GraphQLAPIIdOutput",
-            "GraphQLAPIEndpointOutput",
-            "GraphQLAPIKeyOutput"
-          ],
-          "category": "api",
-          "resourceName": "myapplicationsecretaryamplify"
-        },
-        {
-          "attributes": [
-            "UserPoolId"
-          ],
-          "category": "auth",
-          "resourceName": "myapplicationsecretaryamplify"
-        }
-      ],
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda"
-    },
-    "myapplicationsecretafuse": {
-      "build": true,
-      "providerPlugin": "awscloudformation",
-      "service": "LambdaLayer"
-    },
-    "myapplicationsecretanodeFetch": {
-      "build": true,
-      "providerPlugin": "awscloudformation",
-      "service": "LambdaLayer"
-    }
-  },
-  "parameters": {
-    "AMPLIFY_function_UserServiceLambda_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "UserServiceLambda"
-        }
-      ]
-    },
-    "AMPLIFY_function_UserServiceLambda_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "UserServiceLambda"
-        }
-      ]
-    },
-    "AMPLIFY_function_addUserToGroupOnSignUp_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "addUserToGroupOnSignUp"
-        }
-      ]
-    },
-    "AMPLIFY_function_addUserToGroupOnSignUp_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "addUserToGroupOnSignUp"
-        }
-      ]
-    },
-    "AMPLIFY_function_myapplicationsecretafuse_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "myapplicationsecretafuse"
-        }
-      ]
-    },
-    "AMPLIFY_function_myapplicationsecretafuse_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "myapplicationsecretafuse"
-        }
-      ]
-    },
-    "AMPLIFY_function_myapplicationsecretanodeFetch_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "myapplicationsecretanodeFetch"
-        }
-      ]
-    },
-    "AMPLIFY_function_myapplicationsecretanodeFetch_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "myapplicationsecretanodeFetch"
-        }
-      ]
-    },
-    "AMPLIFY_function_myapplicationsecretaryamplifyPostAuthentication_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "myapplicationsecretaryamplifyPostAuthentication"
-        }
-      ]
-    },
-    "AMPLIFY_function_myapplicationsecretaryamplifyPostAuthentication_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "myapplicationsecretaryamplifyPostAuthentication"
-        }
-      ]
     }
   }
 }
