--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,27 @@
 # testing
 /coverage
 
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+
+# next.js
+/.next/
+/out/
+
 # production
 /build
 
