--- a/package.json
+++ b/package.json
@@ -6,34 +6,38 @@
     "@aws-amplify/ui-react": "4.3.3",
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
-    "@mui/icons-material": "^5.11.0",
+    "@mui/icons-material": "5.11.0",
     "@mui/material": "5.11.2",
+    "@next/font": "13.1.6",
+    "aws-amplify": "5.0.8",
+    "eslint": "8.34.0",
+    "eslint-config-next": "13.1.6",
+    "next": "13.1.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "7.41.3",
+    "styled-components": "5.3.6",
+    "typescript": "4.9.5",
+    "web-vitals": "2.1.0"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "13.0.0",
     "@testing-library/user-event": "13.2.1",
     "@types/jest": "27.0.1",
-    "@types/node": "16.7.13",
-    "@types/react": "18.0.0",
-    "@types/react-dom": "18.0.0",
+    "@types/node": "18.13.0",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
     "@types/react-router-dom": "5.3.3",
     "@typescript-eslint/eslint-plugin": "5.48.1",
     "@typescript-eslint/parser": "5.48.1",
-    "aws-amplify": "5.0.8",
-    "eslint": "^8.31.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "7.41.3",
-    "react-router-dom": "6.6.1",
-    "react-scripts": "5.0.1",
-    "styled-components": "^5.3.6",
-    "typescript": "4.4.2",
-    "web-vitals": "2.1.0"
+    "@types/styled-components": "^5.1.26"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "eslintConfig": {
     "extends": [
@@ -52,8 +56,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/styled-components": "^5.1.26"
   }
 }
