--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "next.config.js",
-    "src/ui-components/*"
+    "next.config.js"
   ],
   "exclude": ["node_modules"]
 }
