--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@types/react-router-dom": "5.3.3",
     "@typescript-eslint/eslint-plugin": "5.48.1",
     "@typescript-eslint/parser": "5.48.1",
-    "@types/styled-components": "^5.1.26"
+    "@types/styled-components": "5.1.26"
   },
   "scripts": {
     "dev": "next dev",
