--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -58,7 +58,9 @@
         "signupAttributes": [
           "EMAIL"
         ],
-        "socialProviders": [],
+        "socialProviders": [
+          "GOOGLE"
+        ],
         "usernameAttributes": [
           "EMAIL"
         ],
