--- a/amplify/backend/function/myapplicationsecretanodeFetch/lib/nodejs/package.json
+++ b/amplify/backend/function/myapplicationsecretanodeFetch/lib/nodejs/package.json
@@ -3,6 +3,6 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "axios": "1.3.3"
+    "@aws-sdk/lib-dynamodb": "3.289.0"
   }
 }
