--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@typescript-eslint/eslint-plugin": "5.48.1",
     "@typescript-eslint/parser": "5.48.1",
     "aws-amplify": "5.0.8",
+    "axios": "1.3.4",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
@@ -28,6 +29,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "7.41.3",
     "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
     "styled-components": "5.3.6",
     "typescript": "4.9.5",
     "web-vitals": "2.1.0"
