--- a/amplify/backend/function/myapplicationsecretanodeFetch/lib/nodejs/package.json
+++ b/amplify/backend/function/myapplicationsecretanodeFetch/lib/nodejs/package.json
@@ -4,6 +4,6 @@
   "main": "index.js",
   "dependencies": {
     "@aws-sdk/lib-dynamodb": "3.289.0",
-    "@aws-sdk/util-dynamodb": "^3.289.0"
+    "@aws-sdk/util-dynamodb": "3.289.0"
   }
 }
