--- a/amplify/backend/function/myapplicationsecretanodeFetch/myapplicationsecretanodeFetch-awscloudformation-template.json
+++ b/amplify/backend/function/myapplicationsecretanodeFetch/myapplicationsecretanodeFetch-awscloudformation-template.json
@@ -20,7 +20,7 @@
     }
   },
   "Resources": {
-    "LambdaLayerVersion0cadc9e3": {
+    "LambdaLayerVersion2a912cb9": {
       "Type": "AWS::Lambda::LayerVersion",
       "Properties": {
         "CompatibleRuntimes": {
@@ -51,13 +51,50 @@
       "DeletionPolicy": "Delete",
       "UpdateReplacePolicy": "Retain"
     },
-    "LambdaLayerPermissionPrivate0cadc9e3": {
+    "LambdaLayerPermissionPrivate2a912cb9": {
       "Type": "AWS::Lambda::LayerVersionPermission",
       "Properties": {
         "Action": "lambda:GetLayerVersion",
         "LayerVersionArn": {
-          "Ref": "LambdaLayerVersion0cadc9e3"
+          "Ref": "LambdaLayerVersion2a912cb9"
         },
+        "Principal": {
+          "Ref": "AWS::AccountId"
+        }
+      }
+    },
+    "LambdaLayerVersion0cadc9e3": {
+      "Type": "AWS::Lambda::LayerVersion",
+      "Properties": {
+        "CompatibleRuntimes": [
+          "nodejs14.x"
+        ],
+        "Content": {
+          "S3Bucket": {
+            "Ref": "deploymentBucketName"
+          },
+          "S3Key": "amplify-builds/myapplicationsecretanodeFetch-LambdaLayerVersion0cadc9e3-build.zip"
+        },
+        "Description": "Updated layer version 2023-03-12T00:28:53.287Z",
+        "LayerName": {
+          "Fn::Sub": [
+            "myapplicationsecretanodeFetch-${env}",
+            {
+              "env": {
+                "Ref": "env"
+              }
+            }
+          ]
+        }
+      },
+      "DeletionPolicy": "Delete",
+      "UpdateReplacePolicy": "Retain"
+    },
+    "LambdaLayerPermissionPrivate0cadc9e3": {
+      "Type": "AWS::Lambda::LayerVersionPermission",
+      "Properties": {
+        "Action": "lambda:GetLayerVersion",
+        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretanodeFetch-dev:48",
         "Principal": {
           "Ref": "AWS::AccountId"
         }
@@ -104,7 +141,7 @@
   "Outputs": {
     "Arn": {
       "Value": {
-        "Ref": "LambdaLayerVersion0cadc9e3"
+        "Ref": "LambdaLayerVersion2a912cb9"
       }
     }
   }
