--- a/amplify/backend/function/UserServiceLambda/src/package.json
+++ b/amplify/backend/function/UserServiceLambda/src/package.json
@@ -18,6 +18,7 @@
     "@aws-sdk/util-dynamodb": "^3.289.0",
     "@nlpjs/basic": "4.26.1",
     "@types/aws-lambda": "8.10.92",
-    "node-nlp": "4.26.1"
+    "node-nlp": "4.26.1",
+    "redis": "^4.6.5"
   }
 }
