--- a/amplify/backend/function/UserServiceLambda/src/package.json
+++ b/amplify/backend/function/UserServiceLambda/src/package.json
@@ -15,10 +15,10 @@
     "@aws-sdk/client-dynamodb": "3.279.0",
     "@aws-sdk/client-ssm": "3.279.0",
     "@aws-sdk/lib-dynamodb": "3.289.0",
-    "@aws-sdk/util-dynamodb": "^3.289.0",
+    "@aws-sdk/util-dynamodb": "3.289.0",
     "@nlpjs/basic": "4.26.1",
     "@types/aws-lambda": "8.10.92",
     "node-nlp": "4.26.1",
-    "redis": "^4.6.5"
+    "redis": "4.6.5"
   }
 }
