--- a/amplify/backend/function/myapplicationsecretadynamodb/myapplicationsecretadynamodb-awscloudformation-template.json
+++ b/amplify/backend/function/myapplicationsecretadynamodb/myapplicationsecretadynamodb-awscloudformation-template.json
@@ -20,7 +20,7 @@
     }
   },
   "Resources": {
-    "LambdaLayerVersionf09531cc": {
+    "LambdaLayerVersionb304d319": {
       "Type": "AWS::Lambda::LayerVersion",
       "Properties": {
         "CompatibleRuntimes": {
@@ -51,13 +51,50 @@
       "DeletionPolicy": "Delete",
       "UpdateReplacePolicy": "Retain"
     },
-    "LambdaLayerPermissionPrivatef09531cc": {
+    "LambdaLayerPermissionPrivateb304d319": {
       "Type": "AWS::Lambda::LayerVersionPermission",
       "Properties": {
         "Action": "lambda:GetLayerVersion",
         "LayerVersionArn": {
-          "Ref": "LambdaLayerVersionf09531cc"
+          "Ref": "LambdaLayerVersionb304d319"
         },
+        "Principal": {
+          "Ref": "AWS::AccountId"
+        }
+      }
+    },
+    "LambdaLayerVersionf09531cc": {
+      "Type": "AWS::Lambda::LayerVersion",
+      "Properties": {
+        "CompatibleRuntimes": [
+          "nodejs14.x"
+        ],
+        "Content": {
+          "S3Bucket": {
+            "Ref": "deploymentBucketName"
+          },
+          "S3Key": "amplify-builds/myapplicationsecretadynamodb-LambdaLayerVersionf09531cc-build.zip"
+        },
+        "Description": "Updated layer version 2023-03-17T01:09:30.736Z",
+        "LayerName": {
+          "Fn::Sub": [
+            "myapplicationsecretadynamodb-${env}",
+            {
+              "env": {
+                "Ref": "env"
+              }
+            }
+          ]
+        }
+      },
+      "DeletionPolicy": "Delete",
+      "UpdateReplacePolicy": "Retain"
+    },
+    "LambdaLayerPermissionPrivatef09531cc": {
+      "Type": "AWS::Lambda::LayerVersionPermission",
+      "Properties": {
+        "Action": "lambda:GetLayerVersion",
+        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretadynamodb-dev:40",
         "Principal": {
           "Ref": "AWS::AccountId"
         }
@@ -67,7 +104,7 @@
   "Outputs": {
     "Arn": {
       "Value": {
-        "Ref": "LambdaLayerVersionf09531cc"
+        "Ref": "LambdaLayerVersionb304d319"
       }
     }
   }
