--- a/amplify/backend/function/myapplicationsecretaawsSdkSSM/myapplicationsecretaawsSdkSSM-awscloudformation-template.json
+++ b/amplify/backend/function/myapplicationsecretaawsSdkSSM/myapplicationsecretaawsSdkSSM-awscloudformation-template.json
@@ -20,6 +20,49 @@
     }
   },
   "Resources": {
+    "LambdaLayerVersionb479bc84": {
+      "Type": "AWS::Lambda::LayerVersion",
+      "Properties": {
+        "CompatibleRuntimes": {
+          "Ref": "runtimes"
+        },
+        "Content": {
+          "S3Bucket": {
+            "Ref": "deploymentBucketName"
+          },
+          "S3Key": {
+            "Ref": "s3Key"
+          }
+        },
+        "Description": {
+          "Ref": "description"
+        },
+        "LayerName": {
+          "Fn::Sub": [
+            "myapplicationsecretaawsSdkSSM-${env}",
+            {
+              "env": {
+                "Ref": "env"
+              }
+            }
+          ]
+        }
+      },
+      "DeletionPolicy": "Delete",
+      "UpdateReplacePolicy": "Retain"
+    },
+    "LambdaLayerPermissionPrivateb479bc84": {
+      "Type": "AWS::Lambda::LayerVersionPermission",
+      "Properties": {
+        "Action": "lambda:GetLayerVersion",
+        "LayerVersionArn": {
+          "Ref": "LambdaLayerVersionb479bc84"
+        },
+        "Principal": {
+          "Ref": "AWS::AccountId"
+        }
+      }
+    },
     "LambdaLayerVersionfdae4b8c": {
       "Type": "AWS::Lambda::LayerVersion",
       "Properties": {
@@ -61,7 +104,7 @@
   "Outputs": {
     "Arn": {
       "Value": {
-        "Ref": "LambdaLayerVersionfdae4b8c"
+        "Ref": "LambdaLayerVersionb479bc84"
       }
     }
   }
